--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ span.enter-link.act {background:url(../images/enter_act.png) top left no-repeat}
 .products:after {content:"."; display:block; clear:both; visibility:hidden; height:0}
 .products a {float:left; position:relative; margin:0 0 0 24px; background:#fff; text-decoration:none; width:284px; height:379px; -moz-border-radius:6px; -webkit-border-radius:6px; border-radius:6px; -moz-box-shadow:0 0 1px rgba(128, 128, 128, .75); -webkit-box-shadow:0 0 1px rgba(128, 128, 128, .75); box-shadow:0 0 1px rgba(128, 128, 128, .75)}
 .products a:first-child {margin:0}
+.products a:hover {background:#f4f4f4}
 .product-photo {height:182px; line-height:0; position:relative}
 .product-photo img {position:relative; -moz-border-radius:6px 6px 0 0; -webkit-border-radius:6px 6px 0 0; border-radius:6px 6px 0 0}
 .product-photo div {position:absolute; right:10px; top:10px; width:82px; height:59px; padding:23px 0 0 0; background:url(../images/sprite.png) -113px -47px; color:#fff; font-size:12px; line-height:18px; text-align:center}
@@ -62,9 +63,10 @@ span.enter-link.act {background:url(../images/enter_act.png) top left no-repeat}
 .product-name {color:#d7152b; font-size:18px; line-height:18px; font-weight:bold; padding:17px 20px 0 20px}
 .product-text {color:#404040; font-size:14px; line-height:18px; padding:10px 20px 0 20px}
 
-.video {position:relative; padding:0 0 37px 0; background:#000 url(../images/video.jpg) no-repeat center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover}
+.video {position:relative; height:441px; background:#000 url(../images/video.jpg) no-repeat center; -webkit-background-size:cover; -moz-background-size:cover; -o-background-size:cover; background-size:cover}
 .video-title {font-size:54px; line-height:54px; color:#fff; text-align:center; padding:53px 0 20px 0}
-.videoWrapper {width:480px; margin:0 auto; position:relative}
+.videoWrapper {display:none; position:absolute; left:50%; bottom:17px; width:594px; margin:0 0 0 -297px}
+.video-link {position:absolute; left:50%; bottom:37px; width:594px; height:334px; margin:0 0 0 -297px; background:url(../images/video-link.png); cursor:pointer}
 
 .behaviors {width:900px; margin:0 auto; padding:57px 0 4px 0}
 .behaviors-title {text-align:center; color:#333; font-size:30px; line-height:30px; padding:0 0 34px 0}
